--- a/PerformanceTestLCSLTSApi/PerformanceTestLCSLTSApi.csproj
+++ b/PerformanceTestLCSLTSApi/PerformanceTestLCSLTSApi.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>15c80501-bc96-41cf-9be9-954455c0c8dc</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+  </ItemGroup>
 
 </Project>
